# rtkgps

./: .gitignore  README.MD  get_config.py  ntripclient.py  poll.py  pollv2.py  pyproject.toml  requirements.txt  reset_f9p.py  set_config.py  tcp.py  test.conf  ubx.py
systemd/: rtk.service  ublox_udev.rules
